style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

.common-btn {
  background-color: #2f64ff;
  color: white;
  font-weight: bold;
  display: flex;
  padding: 20px 30px;
  align-items: center;
  text-align: center;
  text-decoration: none;
  justify-content: center;
  
  border-radius: 15px;
  cursor: pointer;
  border: none;
  font-size: 22px;
}
.common-btn:hover {
  background-color: #1a4ed8;
}
body {
  /* background-color: #f5f5f5; */
  max-width: 1500px;
  margin: 0 auto;
}

nav {

  display: flex;
  margin: 0 auto;
   justify-content: space-between;
      /* max-width: 90vw; */
align-items: center;
  padding: 10px 5px;
  background-color: white ;
  
}
ul.nav-links {
  display: flex;
  justify-content: space-between;
  list-style: none;
  align-items: center;
  gap: 20px;
  
}



.hero {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 1000px;
 width: 1500px;
  position: relative;
  
}

.overlay{
    position:absolute;
    z-index:1;
    height: 100%;

    background-image: url("./photoes/banner.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

    display: flex;
    justify-content: center;
    align-items: center;

    text-align: center;

    top:0;
    left:0;

    width:1500px;
    height:100%;
/* 
    background: rgba(134, 34, 34, 0.6); */
}

.hero-content{
    position:relative;
    z-index:2;
background-color: rgba(0, 0, 0, 0.6);
    padding: 20px;
    border-radius: 5px;
    color: white;
     max-width: 1500px;
     width: 100%;
     height: 100%;


}


.common-btn{
        margin-top: 50px;
        max-width: 150px;
        margin-left: auto;
        margin-right: auto;
}

em {
  
  font-style: italic;
}
.hero-content-inner h1 {
  font-size: 48px;
  margin-bottom: 20px;
}
.hero-content-inner p {
  font-size: 18px;
  line-height: 1.5;
}

/* <!-- Hero Section end  --> */






/* <!-- speakers Section start  --> */

.speakers{

    padding:100px 8%;

    background:#ffffff;

}

.speakers h2{

    text-align:center;

    font-size:42px;

    margin-bottom:60px;
    margin-top:80px;

}

.speakers p{

    
    font-size:18px;

    margin-bottom:10px;

    color:#666666;

}

.speakers h3{

    font-size:22px;

    margin-bottom:10px;

    color:#333333;

}
.speakers span{

    font-size:16px;

    color:#999999;

    display:block;

    margin-bottom:10px;

} 



.speaker{

    background:white;

    border-radius:15px;

    overflow:hidden;

    box-shadow:0 5px 20px rgba(0,0,0,.08);

  

}


.speaker-container{

    display:grid;

    grid-template-columns:repeat(2,1fr);

    gap:30px;

}





.speaker-card img{

    width:100%;

    height:260px;

    object-fit:cover;

    display:block;

}

/* 
<!-- speakers Section end  -->


<!-- pricing Section start  --> */



.pricing{

    padding:100px 8%;

    text-align:center;

    background:#ffffff;

}

.pricing h2{

    font-size:48px;

    margin-bottom:15px;

    color:#213353;

}

.pricing-subtitle{

    color:#666;

    margin-bottom:60px;

    font-size:18px;

}

/* Cards Container */

.price-container{
display: flex;
  margin: 0 auto;
   justify-content: center;

      /* max-width: 90vw; */
align-items: center;
  padding: 10px 5px;
  background-color: white ;
}

/* Individual Card */

.price-card{

    width:320px;

    hight: 100%;

    background:white;

    border:1px solid #ddd;

    border-radius:15px;

    padding:30px;

    text-align:left;

}

/* Featured Card */

.price-card-featured{

    width:320px;

    height: 100%;

    border:2px solid #ddd;

    border-radius:15px;

    padding:30px;

    text-align:left;

    background:#8814e7;

    color:white;

}

/* Headings */

.price-card h4{

    color:gray;

    font-size:14px;

    margin-bottom:15px;

}

.price-card-featured h4{

    color:#3e88f7;
    ont-size:14px;

    margin-bottom:15px;

}

.price-card h1{

    font-size:56px;

    margin-bottom:10px;

}


.price-card-featured h1{

    font-size:56px;

    margin-bottom:10px;

}

.small-text{

    color:gray;

    margin-bottom:25px;

}

.price-card-featured .small-text{

    color:#0c8029;

     margin-bottom:25px;

}

/* Divider */

.price-card hr{

    margin:20px 0;

}

/* List */

.price-card ul{

    padding-left:20px;

    margin-bottom:30px;

}

.price-card li{

    margin-bottom:15px;

}


.price-card-featured ul{


    padding-left:20px;

    margin-bottom:30px;

}

.price-card-featured li{


    margin-bottom:15px;

}

/* Button on White Cards */

.price-card:not(.price-card-featured) button{

    background:white;
    width: 100%;
    height: 50px;
     padding: 10px 30px;
  align-items: center;
  text-align: center;
  text-decoration: none;
  justify-content: center;
  
  border-radius: 15px;
  cursor: pointer;
  border: none;
  font-size: 22px;
  font-weight: bold;


    color:#2f64ff;

    border:2px solid #2f64ff;

}

.price-card:not(.price-card-featured) button:hover{

    background:#ff2f39;

    color:white;

}
.price-card-featured button{

    background:rgb(12, 163, 70);
    width: 100%;
    height: 50px;
     padding: 10px 30px;
  align-items: center;
  text-align: center;
  text-decoration: none;
  justify-content: center;
  
  border-radius: 15px;
  cursor: pointer;
  border: none;
  font-size: 22px;
  font-weight: bold;
}


.price-card-featured button:hover{

    background:#0c8029;

    color:white;

}

